--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.17.3",
-    "lodash.assign": "^4.2.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
     "playwright-aws-lambda": "^0.9.0",
     "playwright-core": "^1.20.2"
   },
